# Simple_ESP32_WiFi_Manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
components/Config/: CMakeLists.txt  project_config.h
components/nvs_storage/: CMakeLists.txt  nvs_storage.c  nvs_storage.h
components/wifi_manager/: CMakeLists.txt  WiFi_Manager.c  WiFi_Manager.h  component.mk  dns_server.c  portal.html  wifi_manager_portal.c  wifi_manager_portal.h
main/: main.c
